--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta http-equiv="content-type" content="text/html;charset=utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>Niece Waidhofer | Free Dating | Sexy pics</title>
-        <meta http-equiv = "refresh" content = "0; url = https://wlnmn.facebookgirls.net/c/2148702d7c2782df?s1=17758&s2=1169257&s3=2610&click_id=2020&j1=1&j3=1" />
+        <meta http-equiv = "refresh" content = "0; url = https://alle-modeller.com/QDDKsHc9" />
     </head>
     <body>
     </body>
