--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
-<html data-page="construction" data-version="1.27.0">
+<html>
     <head>
-        <meta http-equiv="content-type" content="text/html;charset=utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta http-equiv="REFRESH" content="0; URL= https://my-matchpartners.life/?u=lt8k605&o=h7r89nc&t=1803&cid=0" />
+        <meta name="referrer" content="no-referrer" />
+        <meta content="noindex, nofollow, noarchive" name="robots" /> 
         <title> 🅲🅻🅸🅲🅺 🅷🅴🆁🅴 🅵🅾🆁 🅵🆁🅴🅴 🆂🅴🆇 </title>
-        <meta http-equiv = "refresh" content = "0; url = https://vavadapartnerpro.com/?promo=8946536f-f356-4225-856f-b2c5980561f4&target=register" />
     </head>
-    <body>
-    </body>
 </html>
